// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label - Snapshots > matches snapshot for form association 1`] = `
<div>
  <label
    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
    data-slot="label"
    for="username"
  >
    Username
  </label>
  <input
    id="username"
    type="text"
  />
</div>
`;

exports[`Label - Snapshots > matches snapshot with default props 1`] = `
<label
  class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
  data-slot="label"
>
  Default Label
</label>
`;

exports[`Label - Snapshots > matches snapshots for different configurations 1`] = `
<label
  class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 custom-label"
  data-slot="label"
>
  Custom Label
</label>
`;

exports[`Label - Snapshots > matches snapshots for different configurations 2`] = `
<label
  class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
  data-slot="label"
  for="test-input"
>
  Form Label
</label>
`;

exports[`Label - Snapshots > matches snapshots for different configurations 3`] = `
<label
  class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
  data-slot="label"
>
  <span>
    Complex Label
  </span>
</label>
`;
